--- a/DIAS-BlockedPage/BlockedPage.css
+++ b/DIAS-BlockedPage/BlockedPage.css
@@ -30,14 +30,18 @@
     color: #000;
   }
   
-  .about button {
+  .user button {
     background-color: #333;
     border: none;
     color: white;
-    padding: 8px 16px;
-    font-size: 16px;
-    border-radius: 8px;
+    padding: 10px 14px;
+    font-size: 18px;
+    border-radius: 50%;
     cursor: pointer;
+  }
+  
+  .user button:hover {
+    background-color: #555;
   }
   
   .popup-container {
