--- a/DIAS-FacultyHomePage/homepage.css
+++ b/DIAS-FacultyHomePage/homepage.css
@@ -5,23 +5,44 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  height: 100vh;
+  background: linear-gradient(to right, #242323b6, #332626);
+  color: #fff;
+}
+.logo {
+  color: #000;
+  font-size: 24px;
+  font-weight: bold;
+}
+.about-btn {
+  background: linear-gradient(to right, #ffffff, #0e0d0d);
+  border: 1px solid #000;
+  color: #ffffff;
+  padding: 6px 12px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s ease;
 }
 
 .top-bar {
+  width: 100%;
+  padding: 20px 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #333;
-  color: white;
+  background-color: #f8f1f1;
+  color: rgb(54, 53, 53);
   margin-bottom: 20px;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
 .main-container {
   display: flex;
-  flex-direction: column; /* stack cards vertically */
+  flex-direction: column;
   gap: 20px;
   padding: 20px;
 }
@@ -30,7 +51,7 @@ body {
   background-color: white;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
 }
 
@@ -80,5 +101,10 @@ body {
     width: 100%;
     padding: 10px;
     font-size: 15px;
+  }
+  .logo {
+    color: #000;
+    font-size: 24px;
+    font-weight: bold;
   }
 }
