--- a/DIAS-LandingPage/LandingPage.css
+++ b/DIAS-LandingPage/LandingPage.css
@@ -17,7 +17,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: #ffffff;
+  color: rgb(54, 53, 53);
     position: fixed;
     top: 0;
     left: 0;
