--- a/DIAS-StudentAttendance/studentAttendance.css
+++ b/DIAS-StudentAttendance/studentAttendance.css
@@ -6,30 +6,40 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  background: linear-gradient(to right, #242323b6, #332626);
+
 }
 
 .top-bar {
+  width: 100%;
+  padding: 20px 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #333;
-  color: rgb(41, 40, 40);
-  background-color: #ffffff;
+  background-color: #f8f1f1;
+  color: rgb(54, 53, 53);
+  margin-bottom: 20px;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
 .logo {
+  color: #000;
   font-size: 24px;
   font-weight: bold;
 }
 
-.user-profile button {
-  background: none;
-  border: none;
-  color: rgb(37, 36, 36);
-  font-size: 20px;
-  cursor: pointer;
+.about-btn {
+  background: linear-gradient(to right, #ffffff, #0e0d0d);
+    border: 1px solid #000;
+    color: #ffffff;
+    padding: 6px 12px;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
 
 .attendance-container {
@@ -48,6 +58,23 @@ h2 {
   padding: 20px;
 
 }
+.student-info {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+
+}
+.student-info p {
+  margin: 0;
+}
+
+.student-info input[type="checkbox"] {
+  transform: scale(1.2); 
+}
+
+
 
 .student-card {
   min-width: 150px;
@@ -63,7 +90,7 @@ h2 {
   transform: scale(1.2);
   cursor: pointer;
 }
-@media (max-width: 768px) {
+@media (max-width: 320px) {
     .student-card {
       width: 100%; 
     }
