--- a/DIAS-FacultyHomePage/homepage.css
+++ b/DIAS-FacultyHomePage/homepage.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  font-family: Arial, sans-serif;
   height: 100vh;
   background: linear-gradient(to right, #242323b6, #332626);
   color: #fff;
@@ -39,6 +40,102 @@ body {
   left: 0;
   z-index: 100;
 }
+
+.faculty-dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.face-id-icon {
+  font-size: 25px;
+  color: rgb(54, 52, 52);
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(165, 160, 160);
+  color: black;
+  min-width: 250px;
+  right: 0;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  padding: 10px 20px;
+  border-radius: 8px;
+  z-index: 1;
+}
+
+.dropdown-content p {
+  margin: 0 0 10px 0;
+  font-weight: bold;
+}
+
+.dropdown-content a {
+  text-decoration:none;
+  color: #333;
+  font-size: 14px;
+}
+
+.dropdown-content a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 5px;
+}
+
+/* Modal Styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.6);
+}
+
+.modal-content {
+  background-color: rgb(175, 168, 168);
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+}
+
+.modal-content h3 {
+  margin-bottom: 15px;
+}
+
+.modal-content input {
+  width: 90%;
+  padding: 8px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: 1px solid #aaa;
+}
+
+.modal-content button {
+  padding: 8px 15px;
+  border: none;
+  background-color: #5f6061;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-content button:hover {
+  background-color: #0d0d0e;
+}
+
+.close-btn {
+  float: right;
+  font-size: 20px;
+  cursor: pointer;
+  color: #333;
+}
+
 
 .main-container {
   display: flex;
@@ -75,7 +172,7 @@ body {
 
 .action-btn {
   padding: 10px 20px;
-  background-color: #333;
+  background-color: #494747;
   color: white;
   border: none;
   border-radius: 5px;
