--- a/DIAS-FacultyHomePage/homepage.css
+++ b/DIAS-FacultyHomePage/homepage.css
@@ -59,22 +59,40 @@ body {
   background-color: rgb(165, 160, 160);
   color: black;
   min-width: 250px;
-  right: 0;
-  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  right: 10;
+  top: 50px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   padding: 10px 20px;
   border-radius: 8px;
   z-index: 1;
 }
+.dropdown-btn {
+  width: 100%;
+  padding: 8px;
+  margin: 5px 0;
+  border: none;
+  background-color: #eee;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.dropdown-btn:hover {
+  background-color: #ddd;
+}
 
 .dropdown-content p {
-  margin: 0 0 10px 0;
+  margin: 0;
   font-weight: bold;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 .dropdown-content a {
-  text-decoration:none;
-  color: #333;
-  font-size: 14px;
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
 }
 
 .dropdown-content a:hover {
@@ -92,7 +110,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .modal-content {
@@ -135,7 +153,6 @@ body {
   cursor: pointer;
   color: #333;
 }
-
 
 .main-container {
   display: flex;
@@ -181,6 +198,43 @@ body {
 
 .action-btn:hover {
   background-color: #000;
+}
+.profile-box {
+  width: 400px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: #bbb4b4;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.profile-box label {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+  color: rgb(31, 30, 30);
+}
+
+.profile-box input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #777575;
+  border-radius: 6px;
+  background-color: #e3e6e9;
+}
+
+#editBtn,
+#submitBtn {
+  background: linear-gradient(to right, #bbb5b5, #1f1d1d);
+  border: 1px solid #000;
+  color: #ffffff;
+  padding: 6px 12px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s ease;
 }
 
 @media (max-width: 768px) {
