--- a/DIAS-AdminPage/about.css
+++ b/DIAS-AdminPage/about.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", sans-serif;
-    background: #d1cbcb;
+    background: #9b9696;
     color: #333;
   }
   
