--- a/DIAS-AdminPage/admin.css
+++ b/DIAS-AdminPage/admin.css
@@ -8,7 +8,7 @@
 body {
   font-family: Arial, sans-serif;
   height: 100vh;
-  background: linear-gradient(to right, #252525b6, #807a7a);
+  background: linear-gradient(to right, #252525b6, #333232);
   color: #363434;
 }
 
